--- a/index.html
+++ b/index.html
@@ -8,6 +8,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="wrapper">
+        <div class="card">
+            <div class="circle">
+                <div class="bar"></div>
+                <div class="box"><span>80%</span></div>
+            </div>
+            <div class="text">PA</div>
+        </div>
+        <div class="card">
+            <div class="circle">
+                <div class="bar"></div>
+                <div class="box"><span>80%</span></div>
+            </div>
+            <div class="text">OOP</div>
+        </div>
+        <div class="card">
+            <div class="circle">
+                <div class="bar"></div>
+                <div class="box"><span>80%</span></div>
+            </div>
+            <div class="text">SO</div>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
